# librats-rs-sample

./: Cargo.toml  Makefile
attester/: Cargo.toml  README.md  build.rs
attester/src/: main.rs  server.rs
fixtures/: eventlog_data  eventlog_info  quote
lib/: Cargo.toml
lib/src/: lib.rs
protos/: attestation.proto
