[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librats-rs = {git = "https://github.com/haosanzi/librats-rs"}
eventlog-rs = {git = "https://github.com/inclavare-containers/eventlog-rs"}
anyhow = "1.0"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = [ "derive" ] }
